# rag_app

./: .env.example  .gitignore  LICENSE  README.md  fiddling.ipynb  functions.py  logging_setup.py  main.py  models.py  pyproject.toml  test.db  tools.py
api/: main.py  session_manager.py
app/: main.py  models.py
app/core/: config.py  errors.py
app/services/: chat.py  db_manager.py  embeddings.py  llm_client.py  orchestrator.py  rag.py  session.py  session_manager.py  tool_handler.py  user.py
app/tools/: registry.py
cli/: main.py
configurations/: configs_dev.yaml  configs_test.yaml
frontend/: styles.css
frontend/static/: styles.css
frontend/templates/: chat-box.html  chat.html  landing.html  main.html  new-user-form.html  sidebar-select-user.html  sidebar-show-chats.html  user_page.html
src/rag_app/api/: deps.py  factory.py  main.py  routes.py  session_manager.py
src/rag_app/api/templates/: assistant-message.html  chat-box.html  chat-stream.html  chat.html  sidebar-select-user.html  user-message.html  user_page.html
src/rag_app/app/: models.py
src/rag_app/app/core/: config.py  errors.py  logging_setup.py
src/rag_app/app/services/: chat.py  db_manager.py  embeddings.py  llm_client.py  rag.py  session.py  tool_handler.py  user.py
src/rag_app/cli/: main.py
tests/: conftest.py  test_chat.py  test_db_manager.py  test_functions.py  test_llm_client.py  test_tools.py
tests/services/: test_chat.py  test_db_manager.py  test_embedder.py  test_llm_client.py  test_rag.py  test_rerank.py  test_session.py  test_tools.py  utils.py
